# jiracli

./: README.md  pyproject.toml
src/jiracli/: __init__.py  __main__.py  app.py  cli.py  config.py  db.py  detail_view.py  jira_client.py  jiracli.tcss  models.py  notify.py  paths.py  sync.py  timeutil.py
src/jiracli/screens/: detail_screen.py
