[project]
name = "jiracli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Paul Gessinger", email = "hello@paulgessinger.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "textual>=8.2.7",
    "tomli-w>=1.2.0",
    "typer>=0.26.7",
]

[project.scripts]
jiracli = "jiracli:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
